<resources>
    <string name="app_name">Firebase App Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_photo">Main Photo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="recover_your_password">Recover Your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="profile_photo">Profile photo:</string>
    <string name="name">*Name:</string>
    <string name="e_g_john_novak_novakphoto">E.g. John Novak, NovakPhoto</string>
    <string name="email2">*Email:</string>
    <string name="e_g_john_example_com">E.g. john@example.com</string>
    <string name="password2">*Password:</string>
    <string name="six_stars">******</string>
    <string name="confirm_password">*Confirm Password:</string>
    <string name="address_name">Address name:</string>
    <string name="studio">**Studio:</string>
    <string name="address">Address:</string>
    <string name="e_g_long_street_23">E.g. Long Street 23</string>
    <string name="zip_code">Zip code:</string>
    <string name="e_g_55_080">E.g. 55–080</string>
    <string name="town">Town:</string>
    <string name="e_g_warsaw">E.g. Warsaw</string>
    <string name="contact">Contact:</string>
    <string name="contact_email">Contact email:</string>
    <string name="telephone_number">Telephone number:</string>
    <string name="e_g_123456789">E.g. 123456789</string>
    <string name="account_s_description">Account\'s description:</string>
    <string name="hi_i_m_mark">E.g. Hi, I\'m Mark</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_a_source_of_the_photo">Pick a source of the photo:</string>
    <string name="photo_of_the_profile">Photo of the profile</string>
    <string name="this_information_is_required">* - This information is required.</string>
    <string name="full_address_information_must_be_provided_or_none">** - Full address information must be provided or none.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="if_you_don_t_want_to_change_your_password_leave_password_fields_empty">If you don\'t want to change your password, leave password fields empty</string>
    <string name="email3">Email:</string>
    <string name="no_contact_data">No contact data</string>
    <string name="confirm">Confirm</string>
    <string name="post_s_description">Post\'s description</string>
    <string name="imageview">imageView</string>
    <string name="publish">Publish</string>
    <string name="description">Description</string>
    <string name="notifications">Notifications</string>
    <string name="text_message">Text Message</string>
    <string name="_01_01_1970_12_00am">01/01/1970 12:00AM</string>
    <string name="delivered">Delivered</string>
    <string name="your_message">Your message...</string>
    <string name="watch">watch</string>
    <string name="watched">Watched</string>
    <string name="the_description_of_the_post">The description of the post</string>
    <string name="comments">Comments</string>
    <string name="your_comment">Your comment...</string>
    <string name="some_nice_comment">Some nice comment.</string>
    <string name="john_goro_commented_on_your_post">John Goro commented on your post</string>
</resources>