<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivProfilePhoto"
            android:src="@drawable/ic_person_dark"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/imageview" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNotificationsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_goro_commented_on_your_post"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_01_01_1970_12_00am"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>