<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".NewPostFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:contentPadding="5dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">
            <ImageView
                android:id="@+id/ivPostPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery_plus_dark"
                android:minHeight="150dp"
                android:contentDescription="@string/imageview" />
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/petDescription"
            android:padding="5dp"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPublish"
            android:text="@string/publish"
            app:backgroundTint="@color/green_dark"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>