<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/lMessage"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/gray_medium"
            app:contentPadding="15dp">
            <ImageView
                android:id="@+id/ivMessageContent"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="start"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_image_black" />
            <TextView
                android:id="@+id/tvMessageContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:text="@string/text_message"
                android:textSize="15sp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_01_01_1970_12_00am"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSeen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:text="@string/delivered" />

</LinearLayout>